--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,23 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/FeatherAkira"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "youtube"
+name = "YouTube"
+url = "https://www.youtube.com/@FeatherAkira"
 
 [social.params]
-icon = "brand-twitter"
+icon = "brand-youtube"
+
+[[social]]
+identifier = "email"
+name = "Email"
+url = "contact@ffa.tw"
+
+[social.params]
+icon = "mail"
