--- a/config/_default/related.toml
+++ b/config/_default/related.toml
@@ -4,9 +4,9 @@ threshold = 60
 toLower = false
 
 [[indices]]
-name = "tags"
+name = "標籤"
 weight = 100
 
 [[indices]]
-name = "categories"
+name = "分類"
 weight = 200
