--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,4 +13,4 @@ defaultContentLanguage = "zh-tw"
 hasCJKLanguage = true
 
 # Change it to your Disqus shortname before using
-disqusShortname = "Feather_Akira"
+disqusShortname = "FeatherAkira"
